--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "duplex-emitter": "~2.1.2",
     "async": "~0.2.9",
     "reconnect": "~1.5.2",
-    "colors": "~0.6.2"
+    "colors": "~0.6.2",
+    "mkdirp" : "~0.3.5"
   },
   "scripts": {
     "start": "node index.js"
