--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mkdirp" : "~0.3.5"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "forever": "forever start index.js"
   }
 }
